# rust-observability

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
grafana/dashboards/: DEMO-APP-1755947815655.json
grafana/provisioning/dashboards/: dashboards.yml
loki/: loki-config.yml  promtail-config.yml
prometheus/: prometheus.yml
src/: lib.rs  main.rs
src/api/: demo.rs  mod.rs
src/server/: graceful_shutdown.rs  health.rs  metrics.rs  mod.rs  observability.rs  tracing.rs
