[package]
name = "rust-observability"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
axum-prometheus = "0.9.0"
opentelemetry = { version = "0.23.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23.0", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.16.0"
prometheus = "0.13.4"
systemstat = "0.2.3"
sysinfo = { version = "0.30", default-features = false }
tokio = { version = "1.38.0", features = ["full"] }