[package]
name = "rust-observability"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-prometheus = "0.9.0"
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry_sdk = { version = "0.29.0", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.29.1"
prometheus = "0.14.0"
sysinfo = { version = "0.37.0", default-features = false, features = ["system"] }
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.9.2"
tracing = "0.1.41"
tracing-loki = "0.2.6"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }